# aoc2024

./: .gitignore  Cargo.toml  GetInput.sh  ProfileDbg.sh  ProfileRel.sh  README.md  RunRel.sh
aoc/: Cargo.toml
day03/: Cargo.toml
day05/: Cargo.toml
day06/: Cargo.toml
day06vis/: Cargo.toml
day08/: Cargo.toml
day08vis/: Cargo.toml
day09vis/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day12/: Cargo.toml
day12vis/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day14vis/: Cargo.toml
day15/: Cargo.toml
day15vis/: Cargo.toml
day16/: Cargo.toml
day16vis/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day18vis/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day20vis/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day23vis/: Cargo.toml
day24/: Cargo.toml
day24vis/: Cargo.toml
day25/: Cargo.toml
stats/: day01-linux.txt  day01-macos.txt  day02-linux.txt  day02-macos.txt  day03-linux.txt  day03-macos.txt  day04-linux.txt  day04-macos.txt  day04vis-macos.txt  day05-linux.txt  day05-macos.txt  day06-linux.txt  day06-macos.txt  day06vis-macos.txt  day07-linux.txt  day07-macos.txt  day08-linux.txt  day08-macos.txt  day08vis-macos.txt  day09-linux.txt  day09-macos.txt  day09vis-macos.txt  day10-linux.txt  day10-macos.txt  day11-linux.txt  day11-macos.txt  day12-linux.txt  day12-macos.txt  day12vis-macos.txt  day13-linux.txt  day13-macos.txt  day14-linux.txt  day14-macos.txt  day14vis-macos.txt  day15-linux.txt  day15-macos.txt  day15vis-macos.txt  day16-linux.txt  day16-macos.txt  (+23 more)
(+76 files in other folders)
