cargo-features = ["profile-rustflags"]

[workspace.package]
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]

[workspace]
resolver = "2"

members = [
    "aoc",
    "day01",
    "day02",
    "day03",
    "day04",
    "day04vis",
    "day05",
    "day06",
    "day06vis",
    "day07",
    "day08",
    "day08vis",
    "day09",
    "day09vis",
    "day10",
    "day11",
    "day12",
    "day12vis",
    "day13",
    "day14",
    "day14vis",
    "day15",
    "day15vis",
    "day16",
    "day16vis",
    "day17",
    "day18",
    "day18vis",
]

[profile.release]
debug = false
lto = "fat"
strip = true
